Updated the styles

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,57 @@
+*{
+	box-sizing: border-box;
+}
 h1{
 	text-align: center;
+}
+section{
+	background-color: grey;
+	border: 1px solid black;
+	height: 180px;
+	overflow: hidden;
+	padding-left: 10px;
+}
+h2{
+	float: right;
+	background-color: red;
+	margin-top: 0px;
+	border: 1px solid black;
+}
+#h2-1{
+	background-color: red; 
+}
+#h2-2{
+	background-color: orange; 
+}
+#h2-3{
+	background-color: green; 
+}
+p{
+	clear: right;
+}
+@media (min-width: 992px){
+	#s1,#s2,#s3{
+		width: 32.5%;
+		margin-right: 5px;
+		float: left;
+	}
+}
+@media (min-width: 768px) and (max-width: 991px){
+	 #s1,#s2{
+	 	width: 47%;
+	 	margin-right: 20px;
+	 	float: left;
+	 }
+	 #s3{
+	 	width: 96.4%;
+	 	float:left;
+	 	margin-top: 10px;
+	 }
+}
+@media (max-width: 767px){
+	#s1,#s2,#s3{
+		width: 100%;
+		float: left;
+		margin: 10px;
+	}
 }
